*SVN*

* Update OpenBase adaterp's maintainer's email address. Closes #5176. [Derrick Spell]

* Add a quick note about :select and eagerly included associations. [Rick]

* Add docs for the :as option in has_one associations.  Closes #5144 [cdcarter@gmail.com]

* Fixed that has_many collections shouldn't load the entire association to do build or create [DHH]

* Added :allow_nil option for aggregations #5091 [ian.w.white@gmail.com]

* Fix Oracle boolean support and tests. Closes #5139. [schoenm@earthlink.net]

* create! no longer blows up when no attributes are passed and a :create scope is in effect (e.g. foo.bars.create! failed whereas foo.bars.create!({}) didn't.) [Jeremy Kemper]

* Call Inflector#demodulize on the class name when eagerly including an STI model.  Closes #5077 [info@loobmedia.com]

* Preserve MySQL boolean column defaults when changing a column in a migration. Closes #5015. [pdcawley@bofh.org.uk] 

* PostgreSQL: migrations support :limit with :integer columns by mapping limit < 4 to smallint, > 4 to bigint, and anything else to integer. #2900 [keegan@thebasement.org]

* Dates and times interpret empty strings as nil rather than 2000-01-01. #4830 [kajism@yahoo.com]

* Allow :uniq => true with has_many :through associations. [Jeremy Kemper]

* Ensure that StringIO is always available for the Schema dumper. [Marcel Molina Jr.]

* Allow AR::Base#to_xml to include methods too. Closes #4921. [johan@textdrive.com] 

* Replace superfluous name_to_class_name variant with camelize. [Marcel Molina Jr.]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Remove duplicate fixture entry in comments.yml. Closes #4923. [Blair Zajac <blair@orcaware.com>]

* Update FrontBase adapter to check binding version. Closes #4920. [mlaster@metavillage.com] 
