@@ -3,6 +3,17 @@ class Author < ActiveRecord::Base
   has_many :posts_with_comments, :include => :comments, :class_name => "Post"
   has_many :posts_with_categories, :include => :categories, :class_name => "Post"
   has_many :posts_with_comments_and_categories, :include => [ :comments, :categories ], :order => "posts.id", :class_name => "Post"
+  has_many :posts_with_extension, :class_name => "Post" do #, :extend => ProxyTestExtension
+    def testing_proxy_owner
+      proxy_owner
+    end
+    def testing_proxy_reflection
+      proxy_reflection
+    end
+    def testing_proxy_target
+      proxy_target
+    end
+  end
   has_many :comments, :through => :posts
   has_many :funky_comments, :through => :posts, :source => :comments
 
